# advent-of-code

2024/rust/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input.rs
